# Quaternion-Normal-Maps

./: .gitignore  README.md  SUPPORT.md  UsingQLogMaps.md
examples/UE/QuaternionNormalMap/: QuaternionNormalMap.uproject
examples/UE/QuaternionNormalMap/Config/: DefaultEngine.ini  DefaultGame.ini
examples/UE/QuaternionNormalMap/Content/: ApplyQuatLogarithmToCustomNormal.uasset  BasicQuatLogNormalMat.uasset  DetailMapTechniqueComparisonMat.uasset  QLogNormalMapUnpack.uasset  QLogToNormal.uasset  firefly_normal.uasset  firefly_qlog.uasset  geometric_normals_quaternion.uasset
notebooks/: README.md
src/cpp/: CMakeLists.txt  README.md  convertNormalToQLog.cpp  vcpkg.json
